# djangoresful_vue_full_stack

./: .env.dev  .gitignore  docker-compose.yml  package.json
backend/: backend.dev.dockerfile  pyproject.toml  requirements.txt
backend/app/: settings.py  urls.py
backend/product/: models.py  serializer.py  views.py
backend/purchase/: models.py  serializer.py  views.py
backend/upload/: models.py  serializer.py  views.py
backend/user/: permissions.py  serializer.py  views.py
backend/utils/: models.py  pagenation.py
nuxt-frontend/: nuxt.config.js  package.json
nuxt-frontend/components/: NavHead.vue  NavSide.vue
nuxt-frontend/layouts/: child.vue  default.vue
nuxt-frontend/pages/: index.vue
nuxt-frontend/pages/product/: _id.vue  index.vue
nuxt-frontend/plugins/: ant-design-vue.js  element.js
vite-admin/: .env.development  data.json  package-lock.json  package.json  vite.config.ts
vite-admin/src/: App.vue  main.ts
vite-admin/src/api/: api.ts
vite-admin/src/api/image/: index.ts
vite-admin/src/api/products/: index.ts
vite-admin/src/api/upload/: index.ts
vite-admin/src/components/: addImage.vue  color.ts  manualUplaod.vue  mySelect.vue  myUpload.vue  pagenation.vue  types.ts  uploadImage.vue
vite-admin/src/components/addMore/: addMore.vue
vite-admin/src/components/basicLayout/: index.vue
vite-admin/src/components/select/: multipleSelect.vue  (+2 more)
vite-admin/src/layout/: header.vue  layout.ts  layout.vue  layoutStore.ts  sideMenu.vue
vite-admin/src/router/: types.ts
vite-admin/src/store/: index.ts
vite-admin/src/types/: global.d.ts
(+36 files in other folders)
